<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 The Project Material
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <!-- Arrays -->
    <string-array name="bitrate_units">
        <item>bps</item>
        <item>kbps</item>
        <item>Mbps</item>
        <item>Gbps</item>
    </string-array>
    <string-array name="formatted_duration">
        <item>%d:%02d:%02d</item>
        <item>%d:%02d</item>
        <item>%d:%02d</item>
    </string-array>
    <string-array name="size_units">
        <item>B</item>
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
    </string-array>
    <!-- Plurals -->
    <plurals name="video_count">
        <item quantity="one">%d video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <!-- App -->
    <string name="app_name">Videos</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="directory_internal_storage">Internal storage</string>
    <!-- BottomNavigationView -->
    <string name="navigation_title_videos">Videos</string>
    <string name="navigation_title_starred">Favorites</string>
    <string name="navigation_title_folders">Folders</string>
    <!-- BottomSheetDialog: Sort by -->
    <string name="bottom_sheet_sort_by_criteria_name">Name</string>
    <string name="bottom_sheet_sort_by_criteria_duration">Duration</string>
    <string name="bottom_sheet_sort_by_criteria_date">Date</string>
    <string name="bottom_sheet_sort_by_criteria_size">Size</string>
    <string name="bottom_sheet_sort_by_criteria_video_count">Video count</string>
    <string name="bottom_sheet_sort_by_order_a_z">A-Z</string>
    <string name="bottom_sheet_sort_by_order_z_a">Z-A</string>
    <string name="bottom_sheet_sort_by_order_shortest">Shortest</string>
    <string name="bottom_sheet_sort_by_order_longest">Longest</string>
    <string name="bottom_sheet_sort_by_order_oldest">Oldest</string>
    <string name="bottom_sheet_sort_by_order_newest">Newest</string>
    <string name="bottom_sheet_sort_by_order_smallest">Smallest</string>
    <string name="bottom_sheet_sort_by_order_largest">Largest</string>
    <!-- BottomSheetDialog: Video Options -->
    <string name="bottom_sheet_video_options_star">Add to Favorites</string>
    <string name="bottom_sheet_video_options_unstar">Remove from Favorites</string>
    <string name="bottom_sheet_video_options_rename">Rename</string>
    <string name="bottom_sheet_video_options_share">Share</string>
    <string name="bottom_sheet_video_options_info">Information</string>
    <string name="bottom_sheet_video_options_delete">Delete</string>
    <!-- BottomSheetDialog: Video Info -->
    <string name="bottom_sheet_video_info_file_name">File name</string>
    <string name="bottom_sheet_video_info_location">Location</string>
    <string name="bottom_sheet_video_info_resolution">Resolution</string>
    <string name="bottom_sheet_video_info_bitrate">Bitrate</string>
    <string name="bottom_sheet_video_info_frame_rate">Frame rate</string>
    <string name="bottom_sheet_video_info_frame_rate_fps">fps</string>
    <string name="bottom_sheet_video_info_codec">Codec</string>
    <string name="bottom_sheet_video_info_duration">Duration</string>
    <string name="bottom_sheet_video_info_size">Size</string>
    <!-- Dialog -->
    <string name="dialog_negative_button_cancel">Cancel</string>
    <string name="dialog_positive_button_delete">Delete</string>
    <string name="dialog_positive_button_rename">Rename</string>
    <string name="dialog_positive_button_save">Save</string>
    <!-- Dialog: Rename Video -->
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_rename_error_empty_input">Enter file name</string>
    <string name="dialog_rename_error_invalid_characters">Invalid characters</string>
    <!-- Dialog: Delete Video -->
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete this video?</string>
    <!-- Empty States -->
    <string name="empty_state_summary_directories">Organize your videos for easier access</string>
    <string name="empty_state_summary_favorites">Videos you mark as favorite are shown here</string>
    <string name="empty_state_summary_videos">No videos were found on the device</string>
    <string name="empty_state_title_directories">No folders</string>
    <string name="empty_state_title_favorites">No favorites</string>
    <string name="empty_state_title_videos">No videos</string>
    <!-- Menus -->
    <string name="menu_list_view">Switch to list view</string>
    <string name="menu_grid_view">Switch to grid view</string>
    <string name="menu_sort">Sort by</string>
    <string name="menu_settings">Settings</string>
    <!-- PreferenceActivity: Settings -->
    <string name="settings">Settings</string>
    <!-- PreferenceCategory: Customization -->
    <string name="pref_category_customization">Customization</string>
    <!-- ListPreference: Theme -->
    <string name="pref_dialog_title_theme">Choose theme</string>
    <string-array name="pref_entries_theme">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="pref_title_theme">Theme</string>
    <!-- SwitchPreferenceCompat: Color scheme -->
    <string name="pref_summary_off_color_scheme">Static</string>
    <string name="pref_summary_on_color_scheme">Dynamic</string>
    <string name="pref_title_color_scheme">Color scheme</string>
    <!-- SwitchPreferenceCompat: High contrast mode -->
    <string name="pref_summary_off_high_contrast_mode">Off</string>
    <string name="pref_summary_on_high_contrast_mode">On</string>
    <string name="pref_title_high_contrast_mode">High contrast</string>
    <!-- ListPreference: Language -->
    <string name="pref_dialog_title_language">Choose language</string>
    <string name="pref_entry_language_system">System default</string>
    <string name="pref_title_language">Language</string>
    <!-- PreferenceCategory: Thumbnails -->
    <string name="pref_category_thumbnails">Thumbnails</string>
    <!-- Preference: Thumbnails directory -->
    <string name="pref_summary_thumbnails_dir">Manage custom video thumbnail directory path.</string>
    <string name="pref_title_thumbnails_dir">Thumbnails directory</string>
    <!-- PreferenceActivity: Thumbnails directory -->
    <string name="pref_footer_thumbnails_dir">Ensure that the directory you set is exclusively for thumbnails, as it will hide media from the MediaStore upon setup, making them inaccessible through MediaStore.\n\nRemember that the names of JPEG files must match with the names of their corresponding video files.</string>
    <string name="pref_intro_thumbnails_dir">Manage the directory path designated for displaying custom thumbnails of videos.</string>
    <!-- EditTextPreference: Directory path -->
    <string name="pref_dialog_title_thumbnails_dir">Enter directory path</string>
    <string name="pref_title_thumbnails_dir_path">Directory path</string>
    <!-- Preference: Clear cached thumbnails -->
    <string name="pref_summary_clear_cached_thumbnails">The caching mechanism keeps a copy of all of the video thumbnails so they can be displayed quickly when you open the app.</string>
    <string name="pref_title_clear_cached_thumbnails">Clear cached thumbnails</string>
    <!-- Snackbar -->
    <string name="snackbar_message_clear_cached_thumbnails_result_error">Error clearing cache: Cache clearing failed unexpectedly.</string>
    <string name="snackbar_message_clear_cached_thumbnails_result_success">Cache successfully cleared.</string>
    <string name="snackbar_message_favorite_result_starred">\u0022%1$s\u0022 has been added to the favorites.</string>
    <string name="snackbar_message_favorite_result_unstarred">\u0022%1$s\u0022 has been removed from the favorites.</string>
    <string name="snackbar_message_delete_result_error">Error deleting video: Video deleting failed unexpectedly.</string>
    <string name="snackbar_message_delete_result_error_does_not_exist">Error deleting video: Video does not exist.</string>
    <string name="snackbar_message_delete_result_success">\u0022%1$s\u0022 has been permanently deleted.</string>
    <string name="snackbar_message_rename_result_error">Error renaming video: Video renaming failed unexpectedly.</string>
    <string name="snackbar_message_rename_result_success">Video successfully renamed.</string>
    <string name="snackbar_message_thumbnails_dir_error">Invalid thumbnail directory path.</string>
    <string name="snackbar_message_thumbnails_dir_success">Thumbnail directory path updated successfully.</string>
</resources>