<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.projectmaterial.preference.M3TopIntroPreference
        android:title="@string/pref_intro_thumbnails_dir"/>
    <com.projectmaterial.preference.M3EditTextPreference
        android:key="pref_key_thumbnails_dir_path"
        android:title="@string/pref_title_thumbnails_dir_path"
        android:dialogTitle="@string/pref_dialog_title_thumbnails_dir"
        android:inputType="text"
        app:useSimpleSummaryProvider="true"/>
    <com.projectmaterial.preference.M3FooterPreference
        android:title="@string/pref_footer_thumbnails_dir"/>
</PreferenceScreen>