<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/bottom_nav_videos"
        android:id="@+id/menu_navigation_videos"
        android:title="@string/navigation_title_videos"
        android:contentDescription="@string/navigation_title_videos"/>
    <item android:icon="@drawable/bottom_nav_starred"
        android:id="@+id/menu_navigation_starred"
        android:title="@string/navigation_title_starred"
        android:contentDescription="@string/navigation_title_starred"/>
    <item android:icon="@drawable/bottom_nav_folders"
        android:id="@+id/menu_navigation_folders"
        android:title="@string/navigation_title_folders"
        android:contentDescription="@string/navigation_title_folders"/>
</menu>