<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollTargetViewId="@id/recycler_view">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:title="@string/navigation_title_videos"/>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/empty_state_icon"
                android:background="@drawable/quantum_empty_state_videos"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:contentPadding="24dp"
                app:srcCompat="@drawable/quantum_ic_movie_filled_vd_theme_24"
                app:tint="?attr/colorPrimary"/>
            <TextView
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textColor="?attr/colorOnSurface"
                android:id="@+id/empty_state_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/empty_state_title_videos"/>
            <TextView
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textAlignment="center"
                android:id="@+id/empty_state_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="80dp"
                android:text="@string/empty_state_summary_videos"/>
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>