<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/menu_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="-8dp"
        android:text="@string/menu_sort"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textColor="?attr/colorOnSurface"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:singleSelection="true">
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="16sp"
            android:id="@+id/sorting_button_video_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:gravity="center|start"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/bottom_sheet_sort_by_criteria_name"
            app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
            app:icon="@drawable/quantum_ic_title_vd_theme_24"
            app:iconPadding="16dp"
            app:iconSize="24dp"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="16sp"
            android:id="@+id/sorting_button_video_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:gravity="center|start"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/bottom_sheet_sort_by_criteria_duration"
            app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
            app:icon="@drawable/quantum_ic_straighten_vd_theme_24"
            app:iconPadding="16dp"
            app:iconSize="24dp"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="16sp"
            android:id="@+id/sorting_button_video_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:gravity="center|start"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/bottom_sheet_sort_by_criteria_date"
            app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
            app:icon="@drawable/quantum_ic_calendar_clock_vd_theme_24"
            app:iconPadding="16dp"
            app:iconSize="24dp"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="16sp"
            android:id="@+id/sorting_button_video_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:gravity="center|start"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/bottom_sheet_sort_by_criteria_size"
            app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
            app:icon="@drawable/quantum_ic_weight_vd_theme_24"
            app:iconPadding="16dp"
            app:iconSize="24dp"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="24dp"
        app:singleSelection="true">
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/sorting_button_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/sorting_button_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>